[tool.poetry]
name = "wordyforest"
version = "0.1.0"
description = ""
authors = ["ErkamKumru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
Django = "4.1"
django-environ = "0.9.0"
psycopg2-binary = "2.9.3"


[tool.poetry.group.dev.dependencies]
black = "22.6.0"
flake8 = "5.0.4"
isort = "5.10.1"
pre-commit = "2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
