[tool.poetry]
name = "wordyforest"
version = "0.1.0"
description = ""
authors = ["ErkamKumru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
Django = "4.1"
psycopg2-binary = "2.9.3"
googletrans = "3.1.0a0"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = "22.6.0"
flake8 = "5.0.4"
isort = "5.10.1"
pre-commit = "2.20.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
